# NTEPilot

./: .gitignore  AGENTS.md  CLAUDE.md  DEV.md  README.md  README_EN.md  README_JA.md  README_TW.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync-launcher-tag.yml  windows-release.yml
NTEPilot/: instance.py  ocr.py
NTEPilot/bond/: gift.py  movie.py  ocr.py
NTEPilot/cafe/: claim_rewards.py
NTEPilot/combat/: combat.py
NTEPilot/config/: __init__.py  config.py  config_field.py  framework.py  schema.py  template.json
NTEPilot/daily/: claim_big_monthcard.py  claim_daily.py
NTEPilot/device/: connection.py  control.py  device.py  droidcast.py  minitouch.py  screenshot.py  utils.py
NTEPilot/fish/: fish.py
NTEPilot/house/: chinese_to_teleport.py  claim_house.py
NTEPilot/macro/: __init__.py  route.py  semantic.py
NTEPilot/map/: __init__.py  map.py  map_data.py  map_locator.py  mark.py  navigation.py  utils.py
NTEPilot/pinkpaw/: __init__.py  pinkpaw.py  runtime.py
NTEPilot/team/: character.py  team.py
NTEPilot/tools/: __init__.py  (+3 more)
api/: README.md  config.py  scheduler.py  server.py  task_runner.py
dev_doc/: api.md  config.md  device.md  frontend.md  macro.md  map.md  ocr.md  team.md  tools.md  ui.md  utils.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
log/: 2026-06-17_launcher.txt
scripts/: check_pinkpaw_routes.py  convert_pinkpaw_macro.py
template/: README.md  __init__.py  load_template.py  update.py
utils/: decorators.py  exceptions.py  image.py  logger.py  timer.py
(+44 files in other folders)
