[project]
name = "ntepilot"
version = "0.1.0"
description = "NTEPilot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adbutils==2.12.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "decorator==5.3.1",
    "deprecation==2.1.0",
    "fastapi==0.136.3",
    "flatbuffers==25.12.19",
    "h11==0.16.0",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "numpy==2.4.6",
    "onnxruntime==1.26.0; sys_platform != 'win32'",
    "onnxruntime-directml==1.24.4; sys_platform == 'win32'",
    "opencv-python==4.13.0.92",
    "packaging==26.2",
    "pillow==12.2.0",
    "pip==26.0.1",
    "protobuf==7.35.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "requests==2.34.2",
    "retry2==0.9.5",
    "rich==15.0.0",
    "starlette==1.2.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.49.0",
    "websockets==16.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

